--- a/socials.html
+++ b/socials.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
     <link rel="stylesheet" href="css/socials.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -21,19 +22,19 @@
 <main>  
     <div class="social-links">
         <div class="social-link">
-            <a href="https://www.facebook.com/christiandave.casigaygandeza?mibextid=ZbWKwL">
+            <a href="https://www.facebook.com/rachel.baliling.58">
                 <img src="facebook.png" alt="Facebook">
                 <p>Facebook</p>
             </a>
         </div>
         <div class="social-link">
-            <a href="https://github.com/DTianG18">
+            <a href="https://github.com/BalilingRachel">
                 <img src="github.png" alt="GitHub">
                 <p>GitHub</p>
             </a>
         </div>
         <div class="social-link">
-            <a href="https://www.instagram.com/syak_ni_christian?igsh=aWx2YWVrenEyZXBt">
+            <a href="https://www.instagram.com/balilingrachel/">
                 <img src="instagram.avif" alt="Instagram">
                 <p>Instagram</p>
             </a>
