--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me</title>
   <link rel="stylesheet" href="css/about.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <nav>
@@ -19,7 +20,7 @@
     <div class="profile">
       <img src="me.jpg" alt="Blogger's Profile Picture">
       <h1>About Me</h1>
-      <p>"Hello! My name is Christian Dave Casigay Gandeza, and I'm delighted to share a bit about myself with you. At 22 years old, I was born on January 6, 2002, and hail from Lagangilang, CAR. Currently, I'm deeply immersed in my journey as a student of Information Technology at the University of Abra main campus, where I'm constantly expanding my knowledge and honing my skills in the ever-evolving realm of technology.</p>
+      <p>"Hello! My name is Rachel C. Baliling, and I'm delighted to share a bit about myself with you. At 21 years old, I was born on November 17, 2002, and hail from Malibcong, CAR. Currently, I'm deeply immersed in my journey as a student of Information Technology at the University of Abra main campus, where I'm constantly expanding my knowledge and honing my skills in the ever-evolving realm of technology.</p>
       <p>Beyond academics, I have a profound passion for music. Singing and recording songs are not just hobbies but integral parts of my life. Music has a unique way of allowing me to express myself and connect with others on a deeper level. Whether it's belting out a heartfelt ballad or experimenting with new sounds in the recording studio, the joy and fulfillment I derive from music are truly unmatched.</p>
       <p>In addition to my academic and musical pursuits, I also actively engage in various extracurricular activities and community initiatives. I believe in the power of giving back and making a positive impact wherever I go. Whether it's volunteering at local events, participating in environmental conservation efforts, or mentoring younger students, I'm always eager to contribute to the betterment of society.</p>
       <p>As I continue on my journey, I'm excited to embrace new experiences, learn from diverse perspectives, and seize every opportunity for personal and professional growth. Life is an adventure, and I'm determined to make the most of it while leaving a meaningful mark along the way."</p>
@@ -27,7 +28,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2024 CHRISTIAN. All rights reserved.</p>
+    <p>&copy; 2024 BALILING. All rights reserved.</p>
   </footer>
 </body>
 </html>
