--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" href="css\projects.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -23,7 +24,7 @@
         <a href="gallery.html" class="button"><img src="file.png" alt="Button Image"><br>Gallery</a>
     </div>
     <footer>
-        <p>&copy; 2024 CHRISTIAN. All rights reserved.</p>
+        <p>&copy; 2024 BALILING. All rights reserved.</p>
     </footer>
 </body>
 </html>
